/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "SourceVersionReference.proto";

package com.dremio.service.scripts.proto;

option java_package = "com.dremio.service.scripts.proto";
option optimize_for = SPEED;
option java_outer_classname = "ScriptProto";


message Script {
  string script_id = 1; // unique id of a script
  string name = 2; // name of a script

  uint64 created_at = 3; // time when script was created
  string created_by = 4; // user who created script this wont be updated

  string description = 5; // description about script, required??

  uint64 modified_at = 6; // time when script was last modified at
  string modified_by = 7; // user who last modified the script

  repeated string context = 8; // context of script
  string content = 9; // content of script

  repeated com.dremio.dac.proto.model.dataset.SourceVersionReference references = 10; // source version preferences. not used any more.
  repeated string jobIds = 11;

  string owned_by = 12; // user who owns the script. default to created_by. Old scripts will not have this field but will be indexed to the default value, i.e. created_by.
}

message ScriptRequest {
  string name = 1;
  string description = 2;
  repeated string context = 3;
  string content = 4;
  repeated com.dremio.dac.proto.model.dataset.SourceVersionReference references = 5;
  string sessionId = 6;
  repeated string jobIds = 11;
  string owner = 12;
  bool isContentUpdated = 13;
  bool isContextUpdated = 14;
  bool isDescriptionUpdated = 15;
  bool isReferencesUpdated = 16;
  bool isJobIdsUpdated = 17;
}

message ScriptWithPrivileges {
  Script script = 1;
  repeated string privileges = 2;
}

message ScriptListWithPrivileges {
  repeated ScriptWithPrivileges scripts = 1;
  uint64 total_scripts = 2;
}

message AccessibleScriptList {
  repeated Script scripts = 1;
  uint64 total_scripts = 2;
}
